refactor(public-service): add requireTagByName and use it in getPostsByTag for consistent validation